rename to Mass Fair Ads

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "Mass Ad Block",
+    "message": "Mass Fair Ads",
     "description": "The name of the application"
   },
   "appDescription": {
