--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -14,5 +14,29 @@
   "advertisementOff": {
     "message": "Ads OFF",
     "description": "Advertisement off"
+  },
+  "genericRevert": {
+    "message": "Cancel",
+    "description": "for generic 'revert' buttons"
+  },
+  "whitelistPrompt":{
+    "message":"Your list of host names for which uBlock₀ will be disabled. One entry per line. Invalid host names will be silently ignored.",
+    "description":"English: Your list of host names for which uBlock₀ will be disabled. One host name per line. Invalid host names will be silently ignored."
+  },
+  "whitelistImport":{
+    "message":"Import and append",
+    "description":"English: Import and append"
+  },
+  "whitelistExport":{
+    "message":"Export",
+    "description":"English: Export"
+  },
+  "whitelistExportFilename" : {
+    "message": "my-ublock-whitelist_{{datetime}}.txt",
+    "description": "English: my-ublock-whitelist_{{datetime}}.txt"
+  },
+  "whitelistApply":{
+    "message":"Save changes",
+    "description":"English: Apply changes"
   }
 }
