--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -134,5 +134,73 @@
   "3pLastUpdate":{
     "message":"Last update: {{ago}}",
     "description":"English: Last update: {{ago}}, where 'ago' will be replaced with something like '2 days ago'"
+  },
+  "1pFormatHint":{
+    "message":"One filter per line. A filter can be a plain hostname, or an Adblock Plus-compatible filter. Lines prefixed with &lsquo;!&rsquo; will be ignored.",
+    "description":"English: One filter per line. A filter can be a plain hostname, or an Adblock Plus-compatible filter. Lines prefixed with &lsquo;!&rsquo; will be ignored."
+  },
+  "1pImport":{
+    "message":"Import and append",
+    "description":"English: Import and append"
+  },
+  "1pExport":{
+    "message":"Export",
+    "description":"English: Export"
+  },
+  "1pExportFilename" : {
+    "message": "my-ublock-static-filters_{{datetime}}.txt",
+    "description": "English: my-ublock-static-filters_{{datetime}}.txt"
+  },
+  "1pApplyChanges":{
+    "message":"Apply changes",
+    "description":"English: Apply changes"
+  },
+  "rulesPermanentHeader": {
+    "message": "Permanent rules",
+    "description": "header"
+  },
+  "rulesTemporaryHeader": {
+    "message": "Temporary rules",
+    "description": "header"
+  },
+  "rulesRevert": {
+    "message": "Revert",
+    "description": "This will remove all temporary rules"
+  },
+  "rulesCommit": {
+    "message": "Commit",
+    "description": "This will persist temporary rules"
+  },
+  "rulesEdit": {
+    "message": "Edit",
+    "description": "Will enable manual-edit mode (textarea)"
+  },
+  "rulesEditSave": {
+    "message": "Save",
+    "description": "Will save manually-edited content and exit manual-edit mode"
+  },
+  "rulesEditDiscard": {
+    "message": "Discard",
+    "description": "Will discard manually-edited content and exit manual-edit mode"
+  },
+  "rulesImport": {
+    "message": "Import from file...",
+    "description": ""
+  },
+  "rulesExport": {
+    "message": "Export to file",
+    "description": ""
+  },
+  "rulesDefaultFileName": {
+    "message": "my-ublock-dynamic-rules_{{datetime}}.txt",
+    "description": "default file name to use"
+  },
+  "rulesHint": {
+    "message": "List of your dynamic filtering rules.",
+    "description": "English: List of your dynamic filtering rules."
+  },
+  "rulesFormatHint": {
+    "message": "Rule syntax: <code>source destination type action<\/code> (<a href='https:\/\/github.com\/gorhill\/uBlock\/wiki\/Dynamic-filtering:-rule-syntax'>full documentation<\/a>).",
+    "description": "English: dynamic rule syntax and full documentation."
   }
 }
