--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -202,5 +202,45 @@
   "rulesFormatHint": {
     "message": "Rule syntax: <code>source destination type action<\/code> (<a href='https:\/\/github.com\/gorhill\/uBlock\/wiki\/Dynamic-filtering:-rule-syntax'>full documentation<\/a>).",
     "description": "English: dynamic rule syntax and full documentation."
+  },
+  "pickerContextMenuEntry":{
+    "message":"Block element",
+    "description":"English: Block element"
+  },
+  "contextMenuTemporarilyAllowLargeMediaElements": {
+    "message": "Temporarily allow large media elements",
+    "description": "A context menu entry, present when large media elements have been blocked on the current site"
+  },
+  "pickerCreate":{
+    "message":"Create",
+    "description":"English: Create"
+  },
+  "pickerPick":{
+    "message":"Pick",
+    "description":"English: Pick"
+  },
+  "pickerQuit":{
+    "message":"Quit",
+    "description":"English: Quit"
+  },
+  "pickerPreview":{
+    "message":"Preview",
+    "description":"Element picker preview mode: will cause the elements matching the current filter to be removed from the page"
+  },
+  "pickerNetFilters":{
+    "message":"Network filters",
+    "description":"English: header for a type of filter in the element picker dialog"
+  },
+  "pickerCosmeticFilters":{
+    "message":"Cosmetic filters",
+    "description":"English: Cosmetic filters"
+  },
+  "pickerCosmeticFiltersHint":{
+    "message":"Click, Ctrl-click",
+    "description":"English: Click, Ctrl-click"
+  },
+  "pickerContextMenuEntry":{
+    "message":"Block element",
+    "description":"English: Block element"
   }
 }
