migrate from udom to jquery

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -39,6 +39,10 @@
     "message":"Save changes",
     "description":"English: Apply changes"
   },
+  "whitelistDefault":{
+    "message":"Default",
+    "description":"English: Set dafault values"
+  },
   "3pListsOfBlockedHostsPrompt":{
     "message":"{{netFilterCount}} network filters ＋ {{cosmeticFilterCount}} cosmetic filters from:",
     "description":"Appears at the top of the _3rd-party filters_ pane"
